# tcpcom

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: common.h  message.h  message_handler.h  tcp_client.h  tcp_server.h
lib/src/: tcp_client.cpp  tcp_server.cpp
tcp_client/: CMakeLists.txt
tcp_client/src/: main.cpp
tcp_server/: CMakeLists.txt
tcp_server/include/: tcp_message_handler.h
tcp_server/src/: main.cpp
